--- a/index.html
+++ b/index.html
@@ -48,9 +48,34 @@
       border-radius: 10px;
       color: white ;
     }
+    .page-loader {
+      position: fixed;
+      top: 0; 
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background:url ('./img.png') ; 
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999; 
+    }
   </style>
 </head>
 <body>
+  <div class="page-loader" id="page-loader"> 
+    <span class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </span>
+  </div>
+  <script>
+    window.onload = function () { 
+      const loader = document.getElementById('page-loader');
+      if (loader) {
+        loader.style.display = 'none'; 
+      }
+    };
+  </script>
   <div class="navbar navbar-expand-lg fixed-top custom-navbar">
     <div class="container px-sm-5 px-0">
       <a href="https://github.com/ZeveNor" class="ps-4  navbar-brand text-white fw-bold d-flex align-items-center">
@@ -131,7 +156,8 @@
           </p>
           <span class="hello" id="avp">
             <span class="after-hello">Available Project</span><br/>
-          </span> 
+          </span>
+          <p>[Tips] </p>
 
           <div class="container-swap gap-3 d-flex flex-column" data-swapy> 
             <div data-swapy-slot="a">
