--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel='stylesheet' href='./style.css'/>
   <link rel='stylesheet' href='./uptime.css'/>
   <link rel='stylesheet' href='./intro.css'/>
+  <link rel='stylesheet' href='./mac.css'/>
+  <link rel='stylesheet' href='./contribute.css'/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -153,11 +155,36 @@
                 </span><br/>
               </div>
             </div>
+            <div class="contri-block d-flex flex-column ">
+              <div class="d-flex flex-row" style="height: fit-content; overflow-x: auto;">
+                <div class="d-flex flex-column days-space " style="margin-bottom: 0;">
+                  <p class="days-text">SUN</p>
+                  <p class="days-text">&nbsp;</p> 
+                  <p class="days-text">&nbsp;</p>
+                  <p class="days-text">WED</p>
+                  <p class="days-text">&nbsp;</p>
+                  <p class="days-text">&nbsp;</p>
+                  <p class="days-text" >SAT</p>
+                </div>
+                <div class="days" id="contribution-grid"></div>
+              </div>
+              <div class="d-flex justify-content-end" style="width: 100%;">
+                <div class="name-days d-flex align-items-center">
+                  <p class="days-text" style="margin-right: 5px;">LOW</p>
+                  <div class="day inactive"></div>
+                  <div class="day active-3"></div>
+                  <div class="day active-2"></div>
+                  <div class="day active-1"></div>
+                  <p class="days-text" style="margin-left: 5px;">HIGH</p>
+                </div>
+              </div>
+            </div>
+            <script src="contribute.js"></script>
           </p>
           <span class="hello" id="avp">
             <span class="after-hello">Available Project</span><br/>
           </span>
-          <p>[Tips] </p>
+          <p style="color: rgba(254, 252, 252, 0.615); font-size: 13px;">[Tips] Hold & Drag to swap</p>
 
           <div class="container-swap gap-3 d-flex flex-column" data-swapy> 
             <div data-swapy-slot="a">
@@ -179,8 +206,8 @@
                     <a href="https://zevenor.github.io/Shortcut-Utilities/?Destnation=0909845370">
                       <p style="margin: 0 !important; font-size: 12px;">View website</p>
                     </a>
-                    <img height="22"
-                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNor&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775">
+                    <!-- <img height="22"
+                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNor&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775"> -->
                   </div>
                 </div>
               </div>
@@ -204,13 +231,36 @@
                     <a href="https://zevenor.github.io/flappy-bird">
                       <p style="margin: 0 !important; font-size: 12px;">View website</p>
                     </a>
-                    <img height="22"
-                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNors&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775">
+                    <!-- <img height="22"
+                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNors&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775"> -->
                   </div>
                 </div> 
               </div>
             </div>
-            <div data-swapy-item="c" class="outline-block-add mt-3 d-flex flex-column justify-content-center align-items-center">
+            <div data-swapy-slot="c">
+              <div class="outline-block" data-swapy-item="c">
+                <div class="intro-text">
+                  <div class="d-flex flex-row justify-content-between">
+                    <a href="https://github.com/ZeveNor/Scrape-Github-Contribute">
+                      <p>Github Contributions Scraper [Backend]</p>
+                    </a>
+                    <a href='https://github.com/ZeveNor/Scrape-Github-Contribute'><box-icon type='logo' name='github'
+                        color='#ffffff'></box-icon></a>
+                  </div>
+                  <div style="font-size: 14px;" class="d-flex justify-content-between">
+                    <p style="margin: 0; margin-bottom: 5px;">Last 50 days</p>
+                    <p style="margin: 0;">Now</p>
+                  </div>
+                  <div class="status-timeline" id="timeline-Scraper"></div>
+                  <div class="d-flex flex-row justify-content-between">
+                    <a href="" style="cursor: default;"> 
+                      <p style="color: rgb(116, 115, 114); margin: 0 !important; font-size: 12px;">View website</p>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="outline-block-add mt-3 d-flex flex-column justify-content-center align-items-center">
               <p>+</p>
               <h6>waiting for admin to add more</h6>
             </div>
@@ -276,8 +326,6 @@
               <hr/>
               <p>Left Utotech around middle of the year.</p>
               <hr/>
-              <p>Making mini projects.</p>
-              <hr />
               <div class="d-flex flex-row gap-2"> 
                 <div style="background-color: white; border-radius: 15px;">
                   <img src='https://utotech.co.th/images/logo.webp' width="25" height="25" alt='' />
@@ -292,7 +340,9 @@
           <div class="timeline-container timeline-left">
             <div class="timeline-content">
               <h2>2024</h2>
-              <p>Start making my own Dashboard. Learning to make AI Model.</p>
+              <p>Start making my own Dashboard.</p>
+              <hr/>
+              <p>Learning to make AI Model.</p>
               <hr />
               <div class="d-flex flex-row gap-2">
                 <box-icon name='python' type='logo' color='#ffffff'></box-icon>
@@ -310,10 +360,16 @@
               <hr/>
               <p>LSTM Project for predict drugs stocking. using in pharmacy.</p>
               <hr/> 
+              <p>Making Project Deep learning
+                 <br/>- car parking system 
+                 <br/>- car license plate detection 
+                <br/>using deep learning YOLO and CNN</p>
+              <hr/>
               <div class="d-flex flex-row gap-2">
                 <box-icon name='python' type='logo' color='#ffffff'></box-icon>
                 <box-icon name='javascript' type='logo' color='#ffffff'></box-icon>
                 <box-icon name='mongodb' type='logo' color='#ffffff'></box-icon>
+                <box-icon name='aws' type='logo' color='#ffffff'></box-icon>
               </div>
             </div>
           </div>
@@ -321,10 +377,24 @@
       </div>
     </div> 
   </section>
+  <section>
+    <!-- <div class="mac-window">
+      <div class="mac-header">
+        <div class="buttons">
+          <div class="button red"></div>
+          <div class="button yellow"></div>
+          <div class="button green"></div>
+        </div>
+      </div>
+      <div class="code-content">
+    
+      </div>
+    </div> -->
+  </section>
   <script src="./uptime.js"></script>
   <script src="./qrcode.js"></script>
   <script>
-    VANTA.GLOBE({ 
+    VANTA.GLOBE({  
       el: ".bg",
       mouseControls: true,
       touchControls: true,
