--- a/test.html
+++ b/test.html
@@ -4,70 +4,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Swapy Example</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/swapy/dist/swapy.min.css">
-  <script src="https://unpkg.com/swapy/dist/swapy.min.js"></script>
+  <title>Mac-style Code Block</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <style>
+    .days {
+      display: grid;
+      grid-gap: 2px;
+      margin: 20px 0;
+      width: fit-content;
+      padding: 5px;
+      background-color: #1b1b1b55;
+      border-radius: 4px;
+      grid-template-rows: repeat(7, 0fr); 
+      grid-template-columns: repeat(53, 0fr); 
+      box-shadow: 0 15px 35px 0 rgba(42, 51, 83, 0.12),
+        0 5px 15px rgba(0, 0, 0, 0.06);
+    }
+
+    .day {
+      width: 7px;
+      height: 7px;
+      border-radius: 2px;
+    }
+
+    .inactive {
+      background-color: #29272753;
+    }
+    .active-1 {
+      background-color: #196c2e;
+    }
+    .active-2 {
+      background-color: #2ea043;
+    }
+    .active-3 {
+      background-color: #56d364;
+    }
+
+    .none {
+      background-color: transparent;
+    }
+
+    .very-active {
+      background-color: #ff4b4b;
+    }
+  </style>
 </head>
 
-<body class="container mt-5">
-  <div class="container-swap" data-swapy>
-    <div class="outline-block" data-swapy-slot="a">
-      <div class="intro-text" data-swapy-item="a">
-        <div class="d-flex flex-row justify-content-between">
-          <a href="https://github.com/ZeveNor/Shortcut-Utilities">
-            <p>Shortcut-Utilities</p>
-          </a>
-          <a href='https://github.com/ZeveNor/Shortcut-Utilities'><box-icon type='logo' name='github'
-              color='#ffffff'></box-icon></a>
-        </div>
-        <div style="font-size: 14px; " class="d-flex justify-content-between">
-          <p style="margin: 0; margin-bottom: 5px;">Last 50 days</p>
-          <p style="margin: 0;">Now</p>
-        </div>
-        <div class="status-timeline" id="timeline"></div>
-        <div class="d-flex flex-row justify-content-between">
-          <a href="https://zevenor.github.io/Shortcut-Utilities/?Destnation=0909845370">
-            <p style="margin: 0 !important; font-size: 12px;">View website</p>
-          </a>
-          <img height="22"
-            src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNor&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775">
-        </div>
-      </div>
-    </div>
-    <div class="outline-block" data-swapy-slot="b"> 
-      <div class="intro-text" data-swapy-item="b">
-        <div class="d-flex flex-row justify-content-between">
-          <a href="https://github.com/ZeveNor/flappy-bird">
-            <p>flappy-bird with Neural Network </p>
-          </a>
-          <a href='https://github.com/ZeveNor/flappy-bird'><box-icon type='logo' name='github' color='#ffffff'></box-icon></a>
-        </div>
-        <div style="font-size: 14px;" class="d-flex justify-content-between">
-          <p style="margin: 0; margin-bottom: 5px;">Last 50 days</p>
-          <p style="margin: 0;">Now</p>
-        </div>
-        <div class="status-timeline" id="timeline-flappy-bird"></div>
-        <div class="d-flex flex-row justify-content-between">
-          <a href="https://zevenor.github.io/flappy-bird">
-            <p style="margin: 0 !important; font-size: 12px;">View website</p>
-          </a>
-          <img height="22"
-            src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNors&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775">
-        </div>
-      </div>
-    </div>
+<body>
+  <div class="days" id="contribution-grid">
   </div>
-
-  <script>
-    const container = document.querySelector('.container-swap[data-swapy]');
-    if (container) {
-      const swapy = Swapy.createSwapy(container);
-    } else {
-      console.error('Swapy container not found or missing data-swapy attribute.');
-    }
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="contribute.js"></script>
 </body>
 
 </html>
