--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                     <a href="https://zevenor.github.io/Shortcut-Utilities/?Destnation=0909845370">
                       <p style="margin: 0 !important; font-size: 12px;">View website</p>
                     </a>
-                    <!-- <img height="22"
-                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNor&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775"> -->
+                    <img height="22"
+                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNor&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775">
                   </div>
                 </div>
               </div>
@@ -231,8 +231,8 @@
                     <a href="https://zevenor.github.io/flappy-bird">
                       <p style="margin: 0 !important; font-size: 12px;">View website</p>
                     </a>
-                    <!-- <img height="22"
-                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNors&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775"> -->
+                    <img height="22"
+                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNors&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775">
                   </div>
                 </div> 
               </div>
@@ -251,7 +251,7 @@
                     <p style="margin: 0; margin-bottom: 5px;">Last 50 days</p>
                     <p style="margin: 0;">Now</p>
                   </div>
-                  <div class="status-timeline" id="timeline-Scraper"></div>
+                  <div class="status-timeline" id="timeline-Scraper"></div> 
                   <div class="d-flex flex-row justify-content-between">
                     <a href="" style="cursor: default;"> 
                       <p style="color: rgb(116, 115, 114); margin: 0 !important; font-size: 12px;">View website</p>
