--- a/index.html
+++ b/index.html
@@ -260,6 +260,35 @@
                 </div>
               </div>
             </div>
+            <script>
+              document.addEventListener("DOMContentLoaded", function () {
+                  const timelineElement = document.getElementById("timeline-Scraper");
+                  timelineElement.innerHTML = "";
+                  const container = document.createElement("div");
+                  container.className = "status-squares d-flex flex-row-reverse";
+
+                  const today = new Date();
+                  today.setHours(0, 0, 0, 0);
+
+                  for (let i = 0; i < 50; i++) {
+                    const date = new Date(today);
+                    date.setDate(date.getDate() - i);
+                    const dateString = date.toISOString().split("T")[0];
+
+                    const statusSquare = document.createElement("div");
+                    statusSquare.className = "status-square";
+
+                    const isUp = Math.random() > 0;
+
+                    statusSquare.classList.add(isUp ? "bg-green" : "bg-red");
+                    statusSquare.setAttribute("title", `${date.toLocaleDateString()}: ${isUp ? 'Operational' : 'Down'}`);
+
+                    container.appendChild(statusSquare);
+                  }
+
+                  timelineElement.appendChild(container);
+                });
+            </script>
             <div class="outline-block-add mt-3 d-flex flex-column justify-content-center align-items-center">
               <p>+</p>
               <h6>waiting for admin to add more</h6>
