--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-
   <script src="https://unpkg.com/swapy/dist/swapy.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
@@ -139,12 +138,12 @@
   </div>
 
   <section id="first-content">
-    <div style="background-color: rgb(13, 6, 20); background-image: url('./img.png');" class="d-flex justify-content-center align-items-center">
-      <div class="m-5 text-white d-flex flex-sm-row flex-column" style="width: 80vw;"> 
-        <div class="mx-5">
+    <div style="background-color: rgb(13, 6, 20); background-image: url('./img.png'); background-repeat: repeat-x;" class="d-flex justify-content-center align-items-center">
+      <div class="my-5 text-white d-flex flex-xxl-row flex-column" style="width: 80vw;"> 
+        <div class="mx-0 mx-sm-0 "> 
           <p>  
             <span class="hello">Good Morning!</span> <span class="after-hello">My name is <span class="zev">ZEV . .</span></span><br/>
-            <div class="outline-block">  
+            <div class="outline-block-hello mb-5 ">   
               <div class="intro-text">
                 I think I'm nearly close to becoming a Junior developer . . .<br/>
                 . . . Working as a developer </span><span class="num-5">for 5 years.</span>
@@ -155,9 +154,19 @@
                 </span><br/>
               </div>
             </div>
-            <div class="contri-block d-flex flex-column ">
-              <div class="d-flex flex-row" style="height: fit-content; overflow-x: auto;">
-                <div class="d-flex flex-column days-space " style="margin-bottom: 0;">
+            <div class="contri-block d-flex flex-column" style="width: 100%;">
+              <div class="d-flex outside-button-days-group" style="width: 100%;"> 
+                <div class="button-days-group">
+                  <button id="days-2020" type="button" class="btn btn-dark" style="border-radius: 10px 0 0 0;">2020</button>
+                  <button id="days-2021" type="button" class="btn btn-dark">2021</button>
+                  <button id="days-2022" type="button" class="btn btn-dark">2022</button>
+                  <button id="days-2023" type="button" class="btn btn-dark">2023</button>
+                  <button id="days-2024" type="button" class="btn btn-dark">2024</button>
+                  <button id="days-2025" type="button" class="btn btn-dark" style="border-radius: 0 10px 0 0;">2025</button>
+                </div> 
+              </div>
+              <div class="d-flex flex-row days-block" style="height: fit-content;">
+                <div class="d-flex flex-column days-space" style="margin-bottom: 0;">
                   <p class="days-text">SUN</p>
                   <p class="days-text">&nbsp;</p> 
                   <p class="days-text">&nbsp;</p>
@@ -168,7 +177,7 @@
                 </div>
                 <div class="days" id="contribution-grid"></div>
               </div>
-              <div class="d-flex justify-content-end" style="width: 100%;">
+              <div class="d-flex justify-content-end days-name">
                 <div class="name-days d-flex align-items-center">
                   <p class="days-text" style="margin-right: 5px;">LOW</p>
                   <div class="day inactive"></div>
@@ -206,8 +215,8 @@
                     <a href="https://zevenor.github.io/Shortcut-Utilities/?Destnation=0909845370">
                       <p style="margin: 0 !important; font-size: 12px;">View website</p>
                     </a>
-                    <img height="22"
-                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNor&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775">
+                    <!-- <img height="22"
+                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNor&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775"> -->
                   </div>
                 </div>
               </div>
@@ -231,8 +240,8 @@
                     <a href="https://zevenor.github.io/flappy-bird">
                       <p style="margin: 0 !important; font-size: 12px;">View website</p>
                     </a>
-                    <img height="22"
-                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNors&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775">
+                    <!-- <img height="22"
+                      src="https://api.visitorbadge.io/api/visitors?path=https%3A%2F%2Fgithub.com%2FZeveNors&amp;label=VISITOR%20TOTAL&amp;labelColor=%23000000&amp;countColor=%23dce775"> -->
                   </div>
                 </div> 
               </div>
