--- a/test.html
+++ b/test.html
@@ -1,62 +1,139 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang='en'>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mac-style Code Block</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <meta charset='UTF-8'/>
+  <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
+  <title>Document</title>
+
   <style>
-    .days {
-      display: grid;
-      grid-gap: 2px;
-      margin: 20px 0;
-      width: fit-content;
-      padding: 5px;
-      background-color: #1b1b1b55;
-      border-radius: 4px;
-      grid-template-rows: repeat(7, 0fr); 
-      grid-template-columns: repeat(53, 0fr); 
-      box-shadow: 0 15px 35px 0 rgba(42, 51, 83, 0.12),
-        0 5px 15px rgba(0, 0, 0, 0.06);
+    #gallery {
+      width: 98vw;
     }
-
-    .day {
-      width: 7px;
-      height: 7px;
-      border-radius: 2px;
+  
+    #gallery h3 {
+      font-family: "" Azeret Mono "", monospace;
     }
-
-    .inactive {
-      background-color: #29272753;
+  
+    #gallery header,
+    #gallery footer {
+      height: 50vh; /* Adjusted height */
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
-    .active-1 {
-      background-color: #196c2e;
+  
+    .img-group-container {
+      height: 250vh; /* Adjusted to match the new height */
+      position: relative;
     }
-    .active-2 {
-      background-color: #2ea043;
+  
+    .img-group-container>div {
+      position: sticky;
+      top: 0;
+      overflow: hidden;
+      height: 50vh; /* Adjusted height */
     }
-    .active-3 {
-      background-color: #56d364;
+  
+    .img-group { 
+      display: flex;
     }
-
-    .none {
-      background-color: transparent;
+  
+    .img-container {
+      display: flex;
+      width: 100vw;
+      height: 50vh; /* Adjusted height */
+      flex: 0 0 auto; 
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
     }
-
-    .very-active {
-      background-color: #ff4b4b;
+  
+    #gallery header h2 {
+      font-size: 56px;
+      font-weight: 700;
+      letter-spacing: -3px;
+      line-height: 1.2;
+      text-align: center;
+      margin: 0;
+    }
+  
+    .img-container h3 {
+      margin: 0;
+      font-size: 50px;
+      font-weight: 700;
+      letter-spacing: -3px;
+      line-height: 1.2;
+      position: relative;
+      bottom: 30px;
+      display: inline-block;
+    }
+  
+    .img-container img {
+      width: 300px;
+      height: 400px;
+    }
+  
+    .progress {
+      position: fixed;
+      left: 0;
+      right: 0;
+      height: 5px;
+      background: #9911ff;
+      bottom: 50px;
+      transform: scaleX(0);
     }
   </style>
 </head>
-
 <body>
-  <div class="days" id="contribution-grid">
-  </div>
-  <script src="contribute.js"></script>
-</body>
+  <article id="gallery">
+    <section class="img-group-container">
+      <div>
+        <ul class="img-group">
+          <li class="img-container">
+            <img src="/photos/cityscape/1.jpg" />
+            <h3>#001</h3>
+          </li>
+          <li class="img-container">
+            <img src="/photos/cityscape/2.jpg" />
+            <h3>#002</h3>
+          </li>
+          <li class="img-container">
+            <img src="/photos/cityscape/3.jpg" />
+            <h3>#003</h3>
+          </li>
+          <li class="img-container">
+            <img src="/photos/cityscape/4.jpg" />
+            <h3>#004</h3>
+          </li>
+          <li class="img-container">
+            <img src="/photos/cityscape/5.jpg" />
+            <h3>#005</h3>
+          </li>
+        </ul>
+      </div>
+    </section>
+  </article>
+  <p>fffff</p>
+  <script type="module">
+    import { animate, scroll } from "https://cdn.jsdelivr.net/npm/motion@12.6.0/+esm"
 
+    const items = document.querySelectorAll(".img-container")
+
+    // Animate gallery horizontally during vertical scroll
+    scroll(
+      animate(".img-group", {
+        transform: ["none", `translateX(-${items.length - 1}00vw)`],
+      }),
+      { target: document.querySelector(".img-group-container") }
+    )
+
+    // Progress bar representing gallery scroll
+    scroll(animate(".progress", { scaleX: [0, 1] }), {
+      target: document.querySelector(".img-group-container"),
+    })
+  </script>
+  
+ 
+
+</body>
 </html>
