--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset='UTF-8'/>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
   <title>Document</title>
-  <link rel='stylesheet' href='./style.css'/>
-  <link rel='stylesheet' href='./uptime.css'/>
+  <link rel='stylesheet' href='./src/style.css'/>
+  <!-- <link rel='stylesheet' href='./uptime.css'/>
   <link rel='stylesheet' href='./intro.css'/>
   <link rel='stylesheet' href='./mac.css'/>
   <link rel='stylesheet' href='./gallery.css'/> 
   <link rel='stylesheet' href='./blob.css'/>
-  <link rel='stylesheet' href='./contribute.css'/>
+  <link rel='stylesheet' href='./contribute.css'/> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
