--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
   <title>Document</title>
   <link rel='stylesheet' href='./src/style.css'/>
+  <link rel='stylesheet' href='./as.css' />
   <!-- <link rel='stylesheet' href='./uptime.css'/>
   <link rel='stylesheet' href='./intro.css'/>
   <link rel='stylesheet' href='./mac.css'/>
