--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset='UTF-8'/>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
   <title>Document</title>
-  <link rel='stylesheet' href='./src/style.css'/>
   <link rel='stylesheet' href='./as.css' />
-  <!-- <link rel='stylesheet' href='./uptime.css'/>
-  <link rel='stylesheet' href='./intro.css'/>
-  <link rel='stylesheet' href='./mac.css'/>
-  <link rel='stylesheet' href='./gallery.css'/> 
-  <link rel='stylesheet' href='./blob.css'/>
-  <link rel='stylesheet' href='./contribute.css'/> -->
+  <!-- <link rel='stylesheet' href='./test/uptime.css' />
+  <link rel='stylesheet' href='./test/intro.css' />
+  <link rel='stylesheet' href='./test/mac.css' />
+  <link rel='stylesheet' href='./test/gallery.css' />
+  <link rel='stylesheet' href='./test/blob.css' />
+  <link rel='stylesheet' href='./test/contribute.css' /> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -102,8 +101,7 @@
             <div data-bs-toggle="modal" data-bs-target="#Donate" class="nav-link text-white fw-medium">
               &nbsp;
               <img src='./qr.svg' alt=''/>
-            </div>
-            
+            </div> 
           </li>
         </ul>
       </div>
@@ -139,10 +137,10 @@
         <box-icon  name='chevrons-down' animation='fade-down' color='#ffffff'></box-icon>
       </a>
     </div> 
-  </div>
+  </div> 
 
   <section id="first-content">
-    <div style="background-color: rgb(13, 6, 20); background-image: url('./img.png'); background-repeat: repeat-x;" class="d-flex justify-content-center align-items-center">
+    <div style="background-color: rgb(13, 6, 20); background-image: url('./src/work/img.png'); background-repeat: repeat-x;" class="d-flex justify-content-center align-items-center">
       <div class="my-5 text-white d-flex flex-xxl-row flex-column" style="width: 80vw;"> 
         <div class="mx-0 mx-sm-0 "> 
           <p>  
@@ -425,7 +423,7 @@
       </div> 
     </div> 
   </section>
-  <section id="gallery" class="pt-5" style="background:url('./bgwork.png'); 
+  <section id="gallery" class="pt-5" style="background:url('./src/work/bgwork.png'); 
   background-color: #18181b; background-repeat: no-repeat;"> 
     <div id="start" class="text-group-container">
       <div>
@@ -664,7 +662,7 @@
                 </div>
                 <div class="g-details d-flex justify-content-center align-items-center">
                   <div style="border-radius: 20px; padding: 0; overflow: hidden; box-shadow: none;">
-                    <img class="img-shop" src='./src/work/predict.png' alt='' />
+                    <img class="img-shop" src='./src/work/predictdetail.png' alt='' />
                   </div>
                 </div>
               </div>
@@ -699,7 +697,7 @@
                 </div>
                 <div class="g-details d-flex justify-content-center align-items-center">
                   <div style="border-radius: 20px; padding: 0; overflow: hidden; box-shadow: none;">
-                    <img class="img-shop" src='./src/work/botdiscord.png' alt='' /> 
+                    <img class="img-shop" src='./src/work/discorddetail.png' alt='' /> 
                   </div>
                 </div>
               </div>
@@ -712,10 +710,10 @@
     <div class="d-flex justify-content-center align-items-center flex-column" style="height: 100vh; background-color: #18181b;">
       <h1 class="neon-text mb-5">And much more</h1>  
       <h2 style="color: rgba(255, 255, 255, 0.806);">To hire me, please contact me via email.</h2>  
-      <h3 style="color: rgba(255, 255, 255, 0.806);">reset.fluent@gmail.com</h3>  
+      <h3 style="color: rgba(255, 255, 255, 0.806);">zeven@flune.xyz</h3>  
     </div>
   </section>
-  <script type="module">
+  <script type="module"> 
     import { animate, scroll } from "https://cdn.jsdelivr.net/npm/motion@12.6.0/+esm"
 
     const items = document.querySelectorAll(".img-container")
