--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   </div> 
 
   <section id="first-content">
-    <div style="background-color: rgb(13, 6, 20); background-image: url('./src/work/img.png'); background-repeat: repeat-x;" class="d-flex justify-content-center align-items-center">
+    <div style="background-color: rgb(13, 6, 20); background-image: url('./src/work/bgimgsection.png'); background-repeat: repeat-x;" class="d-flex justify-content-center align-items-center">
       <div class="my-5 text-white d-flex flex-xxl-row flex-column" style="width: 80vw;"> 
         <div class="mx-0 mx-sm-0 "> 
           <p>  
@@ -697,7 +697,7 @@
                 </div>
                 <div class="g-details d-flex justify-content-center align-items-center">
                   <div style="border-radius: 20px; padding: 0; overflow: hidden; box-shadow: none;">
-                    <img class="img-shop" src='./src/work/discorddetail.png' alt='' /> 
+                    <img class="img-shop" src='./src/work/disimg.png' alt='' /> 
                   </div>
                 </div>
               </div>
