--- a/test.html
+++ b/test.html
@@ -4,136 +4,79 @@
   <meta charset='UTF-8'/>
   <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
   <title>Document</title>
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
   <style>
-    #gallery {
-      width: 98vw;
+    /* Ensure the Swiper container takes full height and centers content */
+    .modal-body {
+      height: 100%;
     }
-  
-    #gallery h3 {
-      font-family: "" Azeret Mono "", monospace;
-    }
-  
-    #gallery header,
-    #gallery footer {
-      height: 50vh; /* Adjusted height */
+
+    .container {
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100%;
     }
-  
-    .img-group-container {
-      height: 250vh; /* Adjusted to match the new height */
-      position: relative;
-    }
-  
-    .img-group-container>div {
-      position: sticky;
-      top: 0;
-      overflow: hidden;
-      height: 50vh; /* Adjusted height */
-    }
-  
-    .img-group { 
-      display: flex;
-    }
-  
-    .img-container {
-      display: flex;
-      width: 100vw;
-      height: 50vh; /* Adjusted height */
-      flex: 0 0 auto; 
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
-  
-    #gallery header h2 {
-      font-size: 56px;
-      font-weight: 700;
-      letter-spacing: -3px;
-      line-height: 1.2;
-      text-align: center;
-      margin: 0;
-    }
-  
-    .img-container h3 {
-      margin: 0;
-      font-size: 50px;
-      font-weight: 700;
-      letter-spacing: -3px;
-      line-height: 1.2;
-      position: relative;
-      bottom: 30px;
-      display: inline-block;
-    }
-  
-    .img-container img {
-      width: 300px;
-      height: 400px;
-    }
-  
-    .progress {
-      position: fixed;
-      left: 0;
-      right: 0;
-      height: 5px;
-      background: #9911ff;
-      bottom: 50px;
-      transform: scaleX(0);
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: auto;
     }
   </style>
 </head>
 <body>
-  <article id="gallery">
-    <section class="img-group-container">
-      <div>
-        <ul class="img-group">
-          <li class="img-container">
-            <img src="/photos/cityscape/1.jpg" />
-            <h3>#001</h3>
-          </li>
-          <li class="img-container">
-            <img src="/photos/cityscape/2.jpg" />
-            <h3>#002</h3>
-          </li>
-          <li class="img-container">
-            <img src="/photos/cityscape/3.jpg" />
-            <h3>#003</h3>
-          </li>
-          <li class="img-container">
-            <img src="/photos/cityscape/4.jpg" />
-            <h3>#004</h3>
-          </li>
-          <li class="img-container">
-            <img src="/photos/cityscape/5.jpg" />
-            <h3>#005</h3>
-          </li>
-        </ul>
+
+<script type="module">
+  import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs';
+
+  const swiper = new Swiper('.container', {
+    mousewheel: true,
+    loop: true,
+    centeredslides: true,
+    pagination: {
+      el: '.swiper-pagination',
+      clickable: true, 
+    },
+  });
+</script> 
+<img class="img-shop" data-bs-toggle="modal" data-bs-target="#exampleModal" src='./src/work/disimg.png' alt='' />
+<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button> -->
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-centered">
+    <div class="modal-content" style="background-color: rgba(49, 46, 46, 0.45) !important;">
+      <div class="modal-header d-flex justify-content-center text-white">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">< Use scroll mouse or swipe ></h1>
       </div>
-    </section>
-  </article>
-  <p>fffff</p>
-  <script type="module">
-    import { animate, scroll } from "https://cdn.jsdelivr.net/npm/motion@12.6.0/+esm"
-
-    const items = document.querySelectorAll(".img-container")
-
-    // Animate gallery horizontally during vertical scroll
-    scroll(
-      animate(".img-group", {
-        transform: ["none", `translateX(-${items.length - 1}00vw)`],
-      }),
-      { target: document.querySelector(".img-group-container") }
-    )
-
-    // Progress bar representing gallery scroll
-    scroll(animate(".progress", { scaleX: [0, 1] }), {
-      target: document.querySelector(".img-group-container"),
-    })
-  </script>
-  
- 
-
+      <div class="modal-body  d-flex justify-content-center align-items-center" style="overflow-x: hidden;">
+        <div class="container"> 
+          <ul class="swiper-wrapper">
+            <li class="swiper-slide">
+              <img src="./src/discord/2.png" />
+            </li>
+            <li class="swiper-slide">
+              <img src="./src/discord/3.png" />
+            </li>
+            <li class="swiper-slide">
+              <img src="./src/discord/4.png" /> 
+            </li> 
+            <li class="swiper-slide">
+              <img src="./src/discord/5.png" />
+            </li>
+          </ul>
+        
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </div> 
+  </div>
+</div>
 </body>
 </html>
