--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                 <div class="g-details d-flex justify-content-center align-items-center">
                   <div style="border-radius: 20px; padding: 0; overflow: hidden; box-shadow: none;">
                     <!-- <img class="img-shop" data-bs-toggle="modal" data-bs-target="#exampleModal" src='./src/work/disimg.png' alt='' />  -->
-                    <img class="img-shop" src='https://firebasestorage.googleapis.com/v0/b/storage-image-779ac.appspot.com/o/Landing%2Fdisimg.png?alt=media' alt='' />
+                    <img class="img-shop" data-bs-toggle="modal" data-bs-target="#exampleModal" src='https://firebasestorage.googleapis.com/v0/b/storage-image-779ac.appspot.com/o/Landing%2Fdisimg.png?alt=media' alt='' />
                   </div>
                 </div>
               </div>
