--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <li class="nav-item">
             <div data-bs-toggle="modal" data-bs-target="#Donate" class="nav-link text-white fw-medium">
               &nbsp;
-              <img src='./qr.svg' alt=''/>
+              <img src='./qrEngine.svg' alt=''/>
             </div> 
           </li>
         </ul>
@@ -219,7 +219,7 @@
                 </div>
               </div>
             </div>
-            <script src="contribute.js"></script>
+            <script src="contributes.js"></script>
           </p>
           <span class="hello" id="avp">
             <span class="after-hello">Available Project</span><br/>
@@ -825,7 +825,7 @@
   </script>
   
   <script src="./uptime.js"></script>
-  <script src="./qrcode.js"></script>
+  <script src="./qrcodeEngine.js"></script>
   <script>
      VANTA.GLOBE({  
        el: ".bg",
