fix contribute not shown when use with cloudflare

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
                 </div>
               </div>
             </div>
-            <script src="contributeEngine.js"></script>
-          </p>
+            <script src="contribution.js"></script>
+          </p> 
           <span class="hello" id="avp">
             <span class="after-hello">Available Project</span><br/>
           </span>
