--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
               </div>
             </div>
-            <script src="contribution.js"></script>
+            <script src="scraperCon.js"></script> 
           </p> 
           <span class="hello" id="avp">
             <span class="after-hello">Available Project</span><br/>
