change all file path to firebase

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                 </div>
               </div>
             </div>
-            <script src="scraperCon.js"></script> 
+            <script src="https://firebasestorage.googleapis.com/v0/b/storage-image-779ac.appspot.com/o/Landing%2FscraperCon.js?alt=media"></script> 
           </p> 
           <span class="hello" id="avp">
             <span class="after-hello">Available Project</span><br/>
