--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel='stylesheet' href='./test/gallery.css' />
   <link rel='stylesheet' href='./test/blob.css' />
   <link rel='stylesheet' href='./test/contribute.css' /> -->
+  <head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  </head>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
