--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 function getScrape(yearInput) {
                   let year = yearInput ? yearInput : 2025
 
-                  fetch(`https://515e-52-65-174-177.ngrok-free.app/contributions?username=ZeveNor&year=${year}`, {
+                  fetch(`https://afb6-52-65-174-177.ngrok-free.app/contributions?username=ZeveNor&year=${year}`, {
                     headers: {
                       'ngrok-skip-browser-warning': 'true'
                     }
