change all asset from local to firebase storage.

--- a/index.html
+++ b/index.html
@@ -633,35 +633,29 @@
           <div class="timeline-container timeline-left">
             <div class="timeline-content">
               <h2>2022</h2> 
-              <p>Start first project with Utotech. Start from Frontend.</p>
+              <p>Start working as outsource. Start from Frontend.</p>
               <hr/>
               <p>Learning Github , Jira , Figma </p>
               <hr/>
-              <div class="d-flex flex-row gap-2"> 
-                <div style="background-color: white; border-radius: 15px;">
-                  <img src='https://utotech.co.th/images/logo.webp' width="25" height="25" alt=''/>
-                </div>
+              <div class="d-flex flex-row gap-2">
                 <box-icon name='java' type='logo' color='#ffffff'></box-icon>
-                <box-icon name='react' type='logo' color='#ffffff'></box-icon>
+                <box-icon name='react' type='logo' color='#ffffff'></box-icon> 
                 <box-icon name='html5' type='logo' color='#ffffff'></box-icon> 
                 <box-icon name='javascript' type='logo' color='#ffffff'></box-icon>
                 <box-icon name='typescript' type='logo' color='#ffffff'></box-icon>
                 <box-icon name='firebase' type='logo' color='#ffffff'></box-icon>
                 <box-icon name='github' type='logo' color='#ffffff'></box-icon>
-              </div>
+              </div> 
             </div>
           </div>
           <div class="timeline-container timeline-right">
-            <div class="timeline-content">
+            <div class="timeline-content"> 
               <h2>2023</h2>
               <p>Start learning backend and transitioned to the backend side</p>
               <hr/>
-              <p>Left Utotech around middle of the year.</p>
+              <p>Left form being outsource around middle of the year.</p>
               <hr/>
               <div class="d-flex flex-row gap-2"> 
-                <div style="background-color: white; border-radius: 15px;">
-                  <img src='https://utotech.co.th/images/logo.webp' width="25" height="25" alt='' />
-                </div>
                 <box-icon name='go-lang' type='logo' color='#ffffff'></box-icon>
                 <box-icon name='python' type='logo' color='#ffffff'></box-icon>
                 <box-icon name='postgresql' type='logo' color='#ffffff'></box-icon>
